# Sea-of-Stars-Odyssey-Below

./: .gitignore  CMakeLists.txt  README.md  animate_quadtree.cpp  animatedobject.cpp  animatedobject.h  animatedsprite.cpp  animatedsprite.h  audio.cpp  audio.h  camera.cpp  camera.h  combat.cpp  combat.h  command.cpp  command.h  enemy.cpp  enemy.h  enemytype.cpp  enemytype.h  engine.cpp  engine.h  fsm.cpp  fsm.h  graphics.cpp  graphics.h  level.cpp  level.h  loadscreen.cpp  loadscreen.h  main.cpp  object.h  objecttype.cpp  objecttype.h  perf_quadtree.cpp  physics.cpp  physics.h  player.cpp  player.h  projectile.cpp  (+17 more)
Spirtes/: woodcutter.xcf
Spirtes/PSD/: Background.psd  Objects.psd  Tileset.psd
assets/: animated_objects.txt  characters.txt  crab.txt  decors.txt  game-lost.txt  game-won.txt  level-01.txt  level-02.txt  level-03.txt  myobjects.txt  mytileset.txt  objects.txt  octopus.txt  shark.txt  sounds.txt  theme-basic.txt
